--- a/main.html
+++ b/main.html
@@ -166,6 +166,7 @@
                         dx = -dx;
                         b.status = 0;
                         score++;
+                        changeBallColor();
                     }
                     if (score === brickRowCount * brickColumnCount){
                             alert("Congratulations!");
