--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
     <div id="title">
         <canvas id="title_canvas", width="480" height="320"></canvas>
+        <div style="text-align: center;">Press ↑ ↓ to Switch Mode<br>Press Enter to Start the Game</div>
     </div>
     <div id="game">
         <canvas id="game_canvas", width="480" height="320"></canvas>
